# rust-connect-py-ai-to-ic

./: .gitignore  README.md  package-lock.json  package.json
internet_computer/demo_gpt2_model/: Cargo.toml
internet_computer/demo_gpt2_model/src/demo_gpt2_model_backend/: Cargo.toml  demo_gpt2_model_backend.did
internet_computer/demo_gpt2_model/src/demo_gpt2_model_backend/src/: lib.rs
internet_computer/demo_model/: Cargo.toml  README.md  canister_ids.json  dfx.json
internet_computer/demo_model/src/demo_model_backend/: Cargo.toml  demo_model_backend.did
internet_computer/demo_model/src/demo_model_backend/src/: lib.rs
internet_computer/tokenizer_inference_demo/: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
internet_computer/tokenizer_inference_demo/src/inference_backend/: Cargo.toml
internet_computer/tokenizer_inference_demo/src/tokenizer_backend/: Cargo.toml  tokenizer_backend.did
internet_computer/tokenizer_inference_demo/src/tokenizer_backend/src/: adapters.rs  error.rs  lib.rs  upload.rs
internet_computer/tokenizer_inference_demo/src/tokenizer_backend/src/tokenizer/: base_tokenizer.rs  constants.rs  gpt2_tokenizer.rs  mod.rs  tokenization_utils.rs
internet_computer/tokenizer_inference_demo/src/tokenizer_backend/src/vocab/: base_vocab.rs  bpe_vocab.rs  gpt2_vocab.rs  mod.rs
internet_computer/tokenizer_inference_demo/src/tokenizer_inference_demo_backend/: Cargo.toml
internet_computer/tokenizer_inference_demo/src/tokenizer_inference_demo_frontend/: index.html  package.json  vite.config.js
internet_computer/tokenizer_inference_demo/src/tokenizer_inference_demo_frontend/src/: App.jsx  index.scss
python/: GPT2_max_partition_model_pool.py
rust/test_model/: Cargo.toml
rust/upload_byte_file/src/: main.rs
