[package]
name = "tokenizer_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
regex = "1"
itertools = "0.11"
csv = "1"
lazy_static = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
hashbrown = "0.14"
#reqwest = { version = "0.11", features = ["default-tls"] }
reqwest = { version = "0.12.3", features = ["default-tls"] }

#anyhow = "1.0"